# dreame_mcu_protocol

./: .gitignore  Dockerfile  README.md  dreame_z10_notes.md  emulate_docker.sh  pyproject.toml
captures/: unknown_None_0x05.txt  unknowns_from_mcu_0x0f.txt
dreame_mcu_protocol/: crc_util.py  fifo.py  mcu_packets.py  ssh_capture.py
dreame_mcu_protocol/scripts/: decode_packet.py  gui.py  sniff_over_ssh.py
helpers/: prepare_env.sh
